--- a/style.css
+++ b/style.css
@@ -70,6 +70,12 @@ body{
       transition: all 0.3s;
       display: block;
       margin: 0 auto;
+      
+}
+
+a{
+    text-decoration: none;
+      color: inherit;
 }
 
 .playbtn::after {
