--- a/style.css
+++ b/style.css
@@ -996,13 +996,19 @@ a{
 
 /*----------------------------ALL RIGHTS RESERVED----------------------------*/
 
-.arr-img{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10%;
-    width: 100%;
-    height: 35px;
+.footer {
+  text-align: center;
+  font-family: 'VT323';
+  font-size: 20px;
+  color: white;
+  padding: 5px 5px;
+  background-color: #FF0B55; /* 🎨 Change this to your preferred color */
+  width: 100%;
+
+  position: relative; /* Or use fixed if you want it always visible */
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 
