--- a/style.css
+++ b/style.css
@@ -887,6 +887,21 @@ a{
   font-family: 'Handjet';
 }
 
+.comment-content {
+  display: flex;
+  align-items: flex-start;
+  margin: 10px 0;
+}
+
+.comment-icon {
+  font-size: 1.5rem;
+  margin-right: 10px;
+}
+
+.comment-text {
+  font-family: Arial, sans-serif;
+  color: #333;
+}
 
 
 /*---------------------------OTHER SOCIALS------------------------------------*/
